GERONIMO-3900 Add runtime support for non-Sun JVMs.  IBM JVMs require java.ext.dirs to be set correctly.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/branches/2.1@641813 13f79535-47bb-0310-9956-ffa450edef68